--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    name: tests
     # The type of runner that the job will run on
     runs-on: macos-latest
-    
     strategy:
       matrix:
         # Run in all these versions of Python
