--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-        # Run the tests. I'm using pytest and the file is in the tests directory.
-      - name: Run tests
-        run: pytest
       
-      - name: Generate report for Codecov
+      - name: Install Codecov
+        run: |
+          pip install coverage
+          coverage run -m unittest
+    
+      - name: Run with tests
+        run: pytest --cov 
+      
+      - name: Upload report for Codecov
         uses: codecov/codecov-action@v3.1.0
         with:
           files: ./coverage1.xml,./coverage2.xml
