--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,15 +37,19 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       
-      - name: Install pytest
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-      
-      - name: Install Codecov for pytest
-        run: |
           pip install pytest-cov
-    
+          pip install black flake8
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          black: true
+          flake8: true
+  
       - name: Run with tests
         run: pytest --cov=./ --cov-report=xml
       
